--- a/css/main.css
+++ b/css/main.css
@@ -27,3 +27,40 @@ body {
 #clickDiv {
   text-align:center;
 }
+
+.range-slider {
+  width:500px;
+  height:20px;
+  margin:0 auto 1em;
+  position:relative;
+  cursor:e-resize;
+}
+.range-slider:before {
+  content:"";
+  display:block;
+  position:absolute;
+  top:9px;
+  left:0;
+  width:100%;
+  height:2px;
+  background-color:black;
+}
+.range-slider span {
+  display:block;
+  height:inherit;
+  position:relative;
+  z-index:2;
+  background-color:lightblue;
+  cursor:inherit;
+}
+
+/* Test result */
+.test-result {
+  position:absolute;
+  top:10px;
+  right:10px;
+  line-height:1;
+}
+.center {
+  text-align:center;
+}
